# EduHub

./: .gitignore  README.md  api.py  app.py  pyproject.toml  requirements.txt
agents/: intent_router_agent.py  parser_agent.py  solver_agent.py  verifier.py
src/: pipeline.py
src/db/: memory.py
src/multimodal/: ocr_transcriber.py  whisper_transcriber.py
src/rag/: answer_generator.py  data_ingestion.py  embedder.py  main.py  retriever.py
src/rag/data/chroma_db/2ef06f0b-ea6a-4c09-9080-5fb6a7e4eacc/: index_metadata.pickle
