[project]
name = "eduhub"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.5",
    "easyocr>=1.7.2",
    "fastapi>=0.115.0",
    "python-multipart>=0.0.18",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.1",
    "langchain-chroma>=1.1.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "langchain-text-splitters>=1.1.1",
    "nltk>=3.9.3",
    "openai>=2.29.0",
    "openai-whisper>=20250625",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.3.0",
    "streamlit>=1.55.0",
    "transformers>=5.3.0",
    "unstructured[pdf]>=0.21.5",
    "youtube-search-python>=1.6.6",
]
